# tauri-plugin-offlite

./: .gitignore  Cargo.toml  LICENSE  NAMING_CONVENTION.md  README.md  SYNC_DESIGN.md  UNIFIED_DATA_MODEL.md  build.rs
guest-js/: package.json
guest-js/src/: childSync.js  db.js  idgen.js  index.js  schema.js  sync.js  syncManager.js
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: db_batch.toml  db_close.toml  db_create_tables.toml  db_delete.toml  db_execute.toml  db_open.toml  db_query.toml  sync_start.toml  sync_status.toml  sync_stop.toml
permissions/schemas/: schema.json
src/: changelog.rs  database.rs  lib.rs  schema.rs
src/sync/: conflict.rs  engine.rs  mod.rs  pull.rs  push.rs  sse.rs
