[package]
name = "tauri-plugin-offlite"
version = "0.1.0"
links = "tauri-plugin-offlite"
description = "A Tauri plugin for offline-first SQLite storage with sync engine"
authors = ["BiShen <bishen@live.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/bishen/tauri-plugin-offlite"
homepage = "https://www.suanjinshan.com/"
keywords = ["tauri", "plugin", "sqlite", "offline", "sync"]
categories = ["database"]

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
eventsource-client = "0.13"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
